refs #9 XAML を編集
ビルドエラーが出る状態

--- a/D3DImageTutorial/WPFD3DViewer/MainWindow.xaml
+++ b/D3DImageTutorial/WPFD3DViewer/MainWindow.xaml
@@ -1,8 +1,16 @@
 ﻿<Window x:Class="WPFD3DViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:Interop="clr-namespace:System.Windows.Interop;assembly=PresentationCore"
+        Title="WPF D3D Viewer"
+        SizeToContent="WidthAndHeight"
+        Loaded="Window_Loaded">
     <Grid>
-        
+        <Image Width="640" Height="480">
+            <Image.Source>
+                <Interop:D3DImage x:Name="myD3DImage" 
+                    IsFrontBufferAvailableChanged="myD3DImage_IsFrontBufferAvailableChanged"/>
+            </Image.Source>
+        </Image>
     </Grid>
 </Window>
